--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 2 - Your First html</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-
+	<h1>Lab 2 - Your First HTML</h1>
+	<p>Places to visit in Paris:</p>
+	<ul>
+		<li>Smashburger</li>
+		<li>In-And-Out</li>
+		<li>Five Guys</li>
+	</ul>
 </body>
 </html>
