--- a/lab2/index.html
+++ b/lab2/index.html
@@ -7,11 +7,13 @@
 </head>
 <body>
 	<h1>Lab 2 - Your First HTML</h1>
+	<p>The ending. Okay, yep. Neeew.</p>
 	<p>Places to visit in Paris:</p>
 	<ul>
 		<li>Smashburger</li>
 		<li>In-And-Out</li>
 		<li>Five Guys</li>
 	</ul>
+
 </body>
 </html>
