--- a/lab2/index.html
+++ b/lab2/index.html
@@ -6,14 +6,31 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-	<h1>Lab 2 - Your First HTML</h1>
-	<p>The ending. Okay, yep. Neeew.</p>
-	<p>Places to visit in Paris:</p>
+	<h1>Hello World</h1>
+	<h2>Stephanie Arteaga</h2>
+	<p>I'm 21 years old from Manteca, California.</p>
+	<p>I am a junior transfer student.</p>
+	<h3>Hobbies include:</h3>
 	<ul>
-		<li>Smashburger</li>
-		<li>In-And-Out</li>
-		<li>Five Guys</li>
+		<li>Painting</li>
+		<li>Drawing</li>
+		<li>Makeup</li>
+		<li>True crime documentaries</li>
+		<li>Collecting crystals</li>
+		<li>Doing hair</li>
 	</ul>
+	<h2>Tatiana Cabrera Rojo</h2>
+	<p> Hello, Im Tatiana Cabrera Im a 3rd year CD major.</p>
+	<p> I'm from carmel valley, California.</p>
+	<h3>Hobbies Include</h3>
+	<ul>
+		<li>Painting</li>
+		<li>Hiking</li>
+		<li>Watching Films</li>
+		<li>Collecting crystals</li>
+		<li>Gardening</li>
+	</ul>
+
 
 </body>
 </html>
