--- a/lab3/index.html
+++ b/lab3/index.html
@@ -6,6 +6,17 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-
+<img src="../img/step5.jpg">
+<h1>Stephanie Arteaga</h1>
+<p>Hello world. Call me Stephanie or Steph. 21 from Northern California. My interests include listening
+to true crime podcasts, cosmetology, road trips, long walks on the beach and graphic design.</p>
+<h2>Links to labs:</h2>
+<ul>
+	<li><a href="lab2/">Lab 2: Your First HTML</a></li>
+	<li><a href="lab3/">Lab 3: File Structure</a></li>
+	<li><a href="lab4/">Lab 4: File Transfer</a></li>
+	<li><a href="lab5/">Lab 5: More HTML</a></li>
+	<li><a href="lab6/">Lab 6: More Complicated HTML</a></li>
+</ul>
 </body>
 </html>
