--- a/lab4/index.html
+++ b/lab4/index.html
@@ -6,6 +6,12 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+<h1>Lab 4: File Transfer</h1>
+<p>In this lab we learned about file transfers, and how to upload files from github
+and view it in browser. We forgot how to use github and sync files but eventually
+figured it out.
+<img src="img/rep1.jpg">
+<h1>Testing out labs</h1></p>
 
 </body>
 </html>
