--- a/lab4/index.html
+++ b/lab4/index.html
@@ -12,6 +12,8 @@ and view it in browser. We forgot how to use github and sync files but eventuall
 figured it out.
 <img src="img/rep1.jpg">
 <h1>Testing out labs</h1></p>
-
+<img src="img/lab2.jpg">
+<img src="img/lab3.jpg">
+<img src="img/lab4.jpg">
 </body>
 </html>
