--- a/lab4/index.html
+++ b/lab4/index.html
@@ -10,6 +10,12 @@
 <p>In this lab we learned about file transfers, and how to upload files from github
 and view it in browser. We forgot how to use github and sync files but eventually
 figured it out.
+<h1>How to upload from server</h1>
+<ul>
+	<li>test locally: save file then open on local server</li>
+	<li>if everything was okay then upload to github</li>
+	<li>save changes < open github < </li>
+</ul>
 <img src="img/rep1.jpg">
 <h1>Testing out labs</h1></p>
 <img src="img/lab2.jpg">
