--- a/lab4/index.html
+++ b/lab4/index.html
@@ -10,11 +10,17 @@
 <p>In this lab we learned about file transfers, and how to upload files from github
 and view it in browser. We forgot how to use github and sync files but eventually
 figured it out.
-<h1>How to upload from server</h1>
+<h2>How to upload from server</h2>
 <ul>
 	<li>test locally: save file then open on local server</li>
 	<li>if everything was okay then upload to github</li>
-	<li>save changes < open github < </li>
+	<li>save changes < open github < commit orgin < push orgin</li>
+</ul>
+<h2>How to find your website:</h2>
+<ul>
+	<li>https://your_git_username.github.io/cst251/</li>
+	<li>put your github username there then search for projects</li>
+	<li> ex: https://stephmxrie.github.io/cst251/lab4/</li>
 </ul>
 <img src="img/rep1.jpg">
 <h1>Testing out labs</h1></p>
