--- a/lab4/index.html
+++ b/lab4/index.html
@@ -19,7 +19,7 @@ figured it out.
 <h2>How to find your website:</h2>
 <ul>
 	<li>https://your_git_username.github.io/cst251/</li>
-	<li>put your github username there then search for projects</li>
+	<li>put your github username there then search for projectss</li>
 	<li> ex: https://stephmxrie.github.io/cst251/lab4/</li>
 </ul>
 <img src="img/rep1.jpg">
