--- a/lab5/index.html
+++ b/lab5/index.html
@@ -6,6 +6,28 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-
+<h1>Lab 5: More HTML</h1>
+<h2>How I keep my hair vibrant:</h2>
+	<li>Dye on prelightened hair</li>
+	<li>Wash it every three days/every other day</li>
+	<li>Use a deep conditioner</li>
+	<li>Style using hair protectant</li>
+<p>
+<a href="https://www.instagram.com/spnmarie/">
+	<img src="img/a3.jpg">
+</a>
+<a href="https://sarteaga201.weebly.com/">
+	<img src="img/a4.jpg">
+</a>
+<h2>Hair dye reccomendations </h2>
+<ul>
+	<li><a href="https://arcticfoxhaircolor.com/">Arctic Fox</a></li>
+	<li><a href="https://xmondohair.com/pages/xmondo-color">XMondo</a></li>
+	<li><a href="https://iroirocolors.com/">IroIro</a></li>
+	<li><a href="https://www.punky.com/">Punky</a></li>
+</ul>
+<h3><a href="https://stephmxrie.github.io/cst251/lab2/indexsteph">Home</a></h3>
+</p>
+</div>
 </body>
 </html>
