--- a/lab6/index.html
+++ b/lab6/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 6: More Complicated HTML</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<div id="content">
+	<p>
+	<img src="img/jpg.jpg">
+	<h1>Lab 6: More Complicated HTML</h1>
+	<h2>Big Idea</h2>
+	<p>The goal is to incorporate more HTML into our document and get a hang of CSS coding</p>
+	<h2>Difficulties</h2>
+	<p>Me and Tati were only able to attend class remotely therefore it was not as easy as in person</p>
+	<h2>Results</h2>
+	<p>We shall see!</p>
+	</div>
 </head>
 <body>
 
