--- a/lab6/index.html
+++ b/lab6/index.html
@@ -6,14 +6,33 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	<div id="content">
 	<p>
-	<img src="img/jpg.jpg">
+	<img src="img/jpg2.jpg">
 	<h1>Lab 6: More Complicated HTML</h1>
+	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<h2>Big Idea</h2>
 	<p>The goal is to incorporate more HTML into our document and get a hang of CSS coding</p>
 	<h2>Difficulties</h2>
 	<p>Me and Tati were only able to attend class remotely therefore it was not as easy as in person</p>
 	<h2>Results</h2>
 	<p>We shall see!</p>
+	<form action="http://google.com/search" method="GET">
+  Name: <input name="Who is here?" type="text"><br/>
+  Status: <label><input name="status" type="radio" value="First Year">
+    First Year</label>
+  <label><input name="status" type="radio" value="Transfer">
+    Transfer</label></br>
+  Tell me about tomomorrow: <textarea name="project-descrip"></textarea><br/>
+  Year: <select name="completed">
+    <option value="" disabled selected>Year in school</option>
+		<option value="senior">Super Senior</option>
+    <option value="senior">Senior</option>
+    <option value="junior">Junior</option>
+		<option value="senior">Sophomore</option>
+		<option value="junior">Freshmen</option>
+  </select><br/><br/>
+  <input value="Just take me home" type="submit">
+</form>
+
 	</div>
 </head>
 <body>
