--- a/index.html
+++ b/index.html
@@ -1,16 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My_Name Homepage</title>
-	<link rel="stylesheet" type="text/css" href="css/site.css">
+	<img src="https://i.imgur.com/4LVQUyc.jpg">
+	<title>Stephanie Arteaga</title>
+	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-	<main>
-		<p>This page was generated from Wes' File Structure Template Repo.</p>
-		
-		<p>Go crazy and customize me.</p>
-	</main>
+	<h1>Stephanie Arteaga</h1>
+	<h2>Student</h2>
+	<p><b>Stephanie Arteaga</b> is a student at CSUMB. At the young age of 21, she currently resides in
+	<b>Seaside, California</b>. Stephanie is from <b>Northern California</b>, specifically,
+	from <b>Manteca, California</b>. This is near Stockton and the 209 area. She went
+	to community college at <b>San Joaquin Delta College</b>. In her spare time, she also
+	works at <b>Target</b> as a <b>Beauty Expert</b>. There she schedules project sets, oversees
+	the beauty team, manages stock and merchandises product.</p>
 
+	<p>Her overall goal is to pursue a career in <b>Graphic Design</b>. She wants to
+	become a project coordinator in the Design Industry. She also is minoring
+	<b>Business</b>. Something she wants to do on the side is <b>Business Management</b> that correlates to
+	Design. She	hopes to climb the ladder at Target in the meantime.</p>
 
+	<p>Her passions besides school and work is also <b>cosmetology</b>. She loves to learn how
+	to cut, dye and style hair and  makeup. She is a self-taught makeup artist and wishes
+	to learn more. Other hobbies include drawing, collecting crystals, social media,and fashion. She
+	advocates for women's rights and body positivity. She hopes to strive to be a sucessful <b>Business
+  woman</b> and create her own Business.</p>
+
+	<p>Stephanie's goal with taking <b>CST 251</b> is to learn more about coding. She understands a bit of <b>HTML/CSS</b> coding,
+		however, Stephanie has not practiced coding in awhile. She wants to become competent in coding, be able to
+		develop websites and learn <b>backend coding</b> eventually. </p>
 </body>
 </html>
