--- a/lab6/index.html
+++ b/lab6/index.html
@@ -10,11 +10,22 @@
 	<h1>Lab 6: More Complicated HTML</h1>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 	<h2>Big Idea</h2>
-	<p>The goal is to incorporate more HTML into our document and get a hang of CSS coding</p>
+	<p>The goal is to incorporate more HTML into our document and get a hang of CSS coding,
+	along with understanding what we're doing.</p>
 	<h2>Difficulties</h2>
-	<p>Me and Tati were only able to attend class remotely therefore it was not as easy as in person</p>
+	<p>Me and Tati were only able to attend class remotely therefore it
+	 was not as easy as in person. After seeing the notes and viewing the slides I
+   was able to complete the assignment. Other problems I had was with the CSS coding,
+ 		when formatting my document I had to change the pixels for the height of the background from
+		90px to 120px.
+	 </p>
 	<h2>Results</h2>
-	<p>We shall see!</p>
+	<p>Here it is!</p>
+	<h2>Find me</h2>
+	<ul>
+		<li><a href="https://stephmxrie.github.io/cst251/">Home</a></li>
+		<li><a href="https://sarteaga201.weebly.com/">Design Website</a></li></ul>
+	<br></br>
 	<form action="http://google.com/search" method="GET">
   Name: <input name="Who is here?" type="text"><br/>
   Status: <label><input name="status" type="radio" value="First Year">
