--- a/lab6/index.html
+++ b/lab6/index.html
@@ -41,7 +41,7 @@
 		<option value="senior">Sophomore</option>
 		<option value="junior">Freshmen</option>
   </select><br/><br/>
-  <input value="Just take me home" type="submit">
+  <input value="Just take me home:" type="submit">
 </form>
 
 	</div>
