--- a/lab7/index.html
+++ b/lab7/index.html
@@ -1,11 +1,53 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 7: Intro to CSS</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+<main class="major-section">
+<body>
+<main class="major-section">
+<center>
+<h1>Lab 7 : Intro to CSS</h1>
+</center>
+<div id="challenge" class="minor-section">\
+<center>
+<h2>Challenge</h2>
+</center>
+<p>The biggest challenge we had to face was how to start CSS. Last lab we were able to start CSS coding by using a template Wes gave us. Instead of just going off that
+template, I decided to inspect Wes's Lab 7 website on github. There I was able to understand how Wes coded on his webpage. I used that as a template and started tweaking the
+CSS to my liking. What was hard was how to start the CSS and how to add to it without messing it up.</p>
+</div>
+<div id="problems" class="minor-section">
+<center>
+<h2>Problems</h2>
+</center>
+<p>The biggest problem I faced when doing this labe as how to add images in CSS. I was trying to add a picture as a background like Wes did on Lab 7. However,
+it would not work for me. I am not sure if I misunderstood the code or was writing the css for images wrong, but the picture was not going as a background.
+Even when I was able to make the picture show up, it would not show up as a background, it would show up as a box in one of the sections. I was not able to put
+as a file.  </p>
+</div>
 
-</body>
-</html>
+<div id="results" class="minor-section">
+<center>
+<h2>Results</h2>
+</center>
+<p>I was able to add a background! I decided just to do a repeating background with a selfie I used in a previous lab. However, since I was having coding issues, I
+decided just use imgur. Imgur is an online image sharing program, I just used the image link as my background since it is public.</p>
+		</div>
+		</main>
+
+<nav class="major-section">
+<div id="just take me home" class="minor-section">\
+<center>
+<h2>Just Take Me Home</h2>
+</center>
+			<ul>
+	      <li><a href="../index.html">CST251 Homepage</a></li>
+	    </ul>
+		</nav>
+
+	</body>
+	</html>
