--- a/lab7/index.html
+++ b/lab7/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Lab 7: Intro to CSS</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
