--- a/lab7/index.html
+++ b/lab7/index.html
@@ -45,10 +45,21 @@ decided just use imgur. Imgur is an online image sharing program, I just used th
 <div id="just take me home" class="minor-section">\
 <center>
 <h2>Just Take Me Home</h2>
-</center>
-			<ul>
-	      <li><a href="../index.html">CST251 Homepage</a></li>
-	    </ul>
+
+
+
+		</style>
+</head>
+<body>
+
+<button class="button" style="vertical-align:middle"><span>
+<a href="../index.html">CST251 Homepage</a>
+	</span></button></div>
+	</center>
+
+</body>
+</html>
+
 		</nav>
 
 	</body>
