--- a/lab7/index.html
+++ b/lab7/index.html
@@ -12,7 +12,7 @@
 <h1>
 <marquee behavior="alternate"><span class="marquee">Lab 7 : Intro to CSS</span></marquee></h1>
 </center>
-<div id="challenge" class="minor-section">\
+<div id="challenge" class="minor-section">
 <center>
 <h2>Challenge</h2>
 </center>
@@ -26,7 +26,7 @@ CSS to my liking. What was hard was how to start the CSS and how to add to it wi
 </center>
 <div class="wrapper">
 </div>
-<p>The biggest problem I faced when doing this labe as how to add images in CSS. I was trying to add a picture as a background like Wes did on Lab 7. However,
+<p>The biggest problem I faced when doing this lab as how to add images in CSS. I was trying to add a picture as a background like Wes did on Lab 7. However,
 it would not work for me. I am not sure if I misunderstood the code or was writing the css for images wrong, but the picture was not going as a background.
 Even when I was able to make the picture show up, it would not show up as a background, it would show up as a box in one of the sections. I was not able to put
 as a file.  </p>
