--- a/lab8/index.html
+++ b/lab8/index.html
@@ -1,9 +1,50 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
-	<link rel="stylesheet" type="text/css" href="../css/site.css">
+<title>Lab 8:CSS Selectors</title>
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<nav class="major-section">
+
+<center>
+
+		<h1 class="title">Lab 8: CSS Selectors</h1>
+
+</center>
+
+		<img src="img/butterfly.gif">
+
+<h2><div id="challenge">Challenges</div></h2>
+		<div class="paragraph">
+			<p><span>The challenge of this assignment was to classify our code and only
+			code the particular parts.</span></p>
+		</div>
+
+<h2><div id="problems">Problems</div></h2>
+		<div class="paragraph">
+		<p><span>The problems we endured with doing this was first, how to add a background image.
+		after asking Wes for help, he showed us the code and explained how it functions in CSS.
+		After some trial and error, I was able to understand how to place a background properly.
+		The second issue I ran into, personally is organizing my code! I understand What
+		code functions do, however, I am not sure how to word it. </span></p>
+	</div>
+
+<h2><div id="results">Results</div></h2>
+	<p><span> See for yourself! After looking at my notes I was able to understand
+	div and how coding functions. </span></p>
+	</nav>
+
+	<nav class="major-section">
+<center><h1><div id="challenge">Just take me home</div></h1></center
+
+
+<div><body>
+
+
+<button class="button button1"><span>
+<a href="../index.html">CST251 Homepage</a></button>
+	</nav>
+</span></button></div></body>
+
 </head>
 <body>
 
