--- a/index.html
+++ b/index.html
@@ -1,14 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<img src="https://i.imgur.com/4LVQUyc.jpg">
+
 	<title>Stephanie Arteaga</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-	<h1>Stephanie Arteaga</h1>
-	<h2>Student</h2>
+
+<nav class="major-section">
+
+
+
+<h1><span><marquee behavior="alternate"><span class="marquee">I am seeking, I am striving. I am in it with all my heart.</span></marquee></h1>
+
+
+
+
+<img src="img/yuh.jpg"/>
+
+</br>
+
+<center>
+
+<h1>Stephanie Arteaga</h1>
+<b>	<h2>student</h2> </b>
 	<p><b>Stephanie Arteaga</b> is a student at CSUMB. At the young age of 21, she currently resides in
 	<b>Seaside, California</b>. Stephanie is from <b>Northern California</b>, specifically,
 	from <b>Manteca, California</b>. This is near Stockton and the 209 area. She went
@@ -29,6 +45,17 @@
 
 	<p>Stephanie's goal with taking <b>CST 251</b> is to learn more about coding. She understands a bit of <b>HTML/CSS</b> coding,
 		however, Stephanie has not practiced coding in awhile. She wants to become competent in coding, be able to
-		develop websites and learn <b>backend coding</b> eventually. </p>
+		develop websites and learn <b>backend coding</b> eventually.</p>
+
+
+
+<img src="img/yuhhh.png" />
+
+
+
+</center>
+</nav>
+<body>
+</p>
 </body>
 </html>
