--- a/lab9/index.html
+++ b/lab9/index.html
@@ -1,9 +1,62 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 9: Styling Block Elements</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<nav class="major-section">
+
+<center>
+
+		<h1><span><marquee behavior="alternate"><span class="marquee">Lab 9: Styling Block Elements</span></marquee></h1>
+
+</center>
+
+		<img src="img/doggy.png">
+	</nav>
+
+</div>
+
+	<nav class="major-section">
+		<center><h2><div id="challenge">Challenges</div></h2></center>
+		<div class="paragraph">
+			<p><b>The goal of this assignment was to learn about block level html elements with css.
+				 This will include CSS box model, margin and padding,
+				 borders and outline, height and width, and backgrounds.</b></p>
+		</div>
+
+		<center><h2><div id="problems">Problems & Results</div></h2></center>
+		<div class="paragraph">
+		<p><b>No problems so far, as I have been adding borders and margins to my page for
+		previous labs. Check it out! </b></span></p>
+	</div>
+
+		<p><b></b></span></p>
+		</nav>
+
+
+		<nav class="major-section">
+	<center><h1><div id="challenge">Just take me home</div></h1></center
+
+
+	<div><body>
+
+
+	<button class="button button1"><span>
+	<a href="../index.html">CST251 Homepage</a></button>
+		</nav>
+	</span></button></div></body>
+
+
+	</nav>
+</span></button></div></body>
+
+</head>
+<body>
+
+</body>
+</html>
+
 </head>
 <body>
 
