--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title>Stephanie Arteaga</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -12,19 +13,22 @@
 
 
 
-<h1><span><marquee behavior="alternate"><span class="marquee">I am seeking, I am striving. I am in it with all my heart.</span></marquee></h1>
+<h1><span>"I am seeking, I am striving. I am in it with all my heart." - Vincent Van Gogh</h1>
 
 
+</nav>
 
+<nav class="major-section">
 
 <img src="img/yuh.jpg"/>
 
 </br>
 
-<center>
+
 
 <h1>Stephanie Arteaga</h1>
-<b>	<h2>student</h2> </b>
+<b>	<h2>communication design</h2> </b>
+<b>	<h1>student</h1> </b>
 	<p><b>Stephanie Arteaga</b> is a student at CSUMB. At the young age of 21, she currently resides in
 	<b>Seaside, California</b>. Stephanie is from <b>Northern California</b>, specifically,
 	from <b>Manteca, California</b>. This is near Stockton and the 209 area. She went
@@ -53,7 +57,7 @@
 
 
 
-</center>
+
 </nav>
 <body>
 </p>
