--- a/lab10/index.html
+++ b/lab10/index.html
@@ -1,9 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title>Lab 10: Styling Text Elements</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+
+
+	<link href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&family=Sarina&display=swap" rel="stylesheet">
+	<body>
+	<main class="major-section">
+	<body>
+	<main class="major-section">
+	<main class="major-section">
+	<center>
+
+	<a href="https://stephmxrie.github.io/cst251/"><div class="image">	<img src="img/cloud.gif"></div></a>
+	<a href="https://sarteaga201.weebly.com/"><div class="img">	<img src="img/cloud.gif"></div></a>
+
+	<br>
+
+	<h1>I think it's time you had a pink cloud summer.
+	'Cause you've gone too long without a smile.</h1>
+
+</main>
+</body>
+
+
+<main class="major-section">
+<body>
+	<center><h1>Lab 10: Styling Text Elements</h1></center>
+	<center><h2><p class="over"><div id="challenge">Challenges</div></h2></p></center>
+	<p>The goal of this lab was to understand css colors, know the different color codes.
+		Another part was styling text elements by transforming and decorating. </p>
+	<center><p class="over"><h2><div id="challenge">Problems</div></p></h2></center>
+	<p>My main challenge was adding Google Fonts. I had some trial and error having the font show up.
+	With double checking my code and looking at the lecture notes I was able to have it work.</p>
+	<center><p class="over"><h2><div id="challenge">Results</div><p></h2></center>
+	<p>My main focus was to use google fonts in this lab and play with color.
+		I like to take hex codes from the background using photoshop and add it to my lab.
+	I am happy with how the page looks and I like how my text came out. I would like to work
+on styling pages with complex formating.</p>
+
+</main>
+
 </head>
 <body>
 
