--- a/lab11/index.html
+++ b/lab11/index.html
@@ -17,7 +17,7 @@
 	<main id="content">
 		<div class="feature-image"><img src="img/cat.gif"></div>
 		<div id="challenge">
-			<h2>Challenge</h2>
+			<h2>Challenges</h2>
 			<p>This lab was about advanced block-level styling and understanding block elements by positioning elements, and display properties.</p>
 		</div>
 		<div id="problems">
