--- a/lab13/index.html
+++ b/lab13/index.html
@@ -29,4 +29,4 @@
 graphics, and logo & identity branding both locally and nationalwide.</p></div>
 <div id="container">
 <div id="right"><P align="right">
-<b><p>more about us >><p><b>	 </div></p>
+<b><p>more about us ↠<p><b>	 </div></p>
