--- a/lab13/index.html
+++ b/lab13/index.html
@@ -3,30 +3,17 @@
 <html>
 <head>
 	<title>Lab 12: Advanced Block-level Styling II</title>
+	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
-	<link href="https://fonts.googleapis.com/css2?family=Suez+One&display=swap" rel="stylesheet">
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Slab:wght@100&display=swap" rel="stylesheet">
 </head>
 <body>
-
-<div id="title-box">
-	   	<div id="des2">design<b>wise</b></div>
-			  	<div id="des3">we are creative people.</div>
-
-
-<div id="caption-box">
-<a href="#">portfolio</a>
-<a href="#">about us</a>
-<a href="#">contact</a>
-<a href="#">home</a>
-			 </div>
-
-<p class="small"><div class="title">Good design is</div><br>
-<div id="title-box2"><div class="title 2">good business.</div></p>
-		 </div>
-<div id="container">
-<p>DesignWise is a creative services studio located in Yorktown, Virginia. We create websites, print
-graphics, and logo & identity branding both locally and nationalwide.</p></div>
-<div id="container">
-<div id="right"><P align="right">
-<b><p>more about us ↠<p><b>	 </div></p>
+<div id="helpme">
+	<h2>Challenge</h2>
+	<p>This lab was challenging because we had to copy our own website without being able to use any code from the website.</p>
+	<h2>Problems</h2>
+	<p>Formatting was the biggest problem</p>
+	<h2>Results</h2>
+	<p>Take a look!</p>
+</div>
+</body>
+	<iframe id="fake" src="fake.html"></iframe>
