--- a/lab13/fake.html
+++ b/lab13/fake.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab 12: Advanced Block-level Styling II</title>
+	<title>Fake HTML</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 	<link href="https://fonts.googleapis.com/css2?family=Suez+One&display=swap" rel="stylesheet">
