--- a/lab13/fake.html
+++ b/lab13/fake.html
@@ -26,8 +26,11 @@
 <div id="title-box2"><div class="title 2">good business.</div></p>
 		 </div>
 <div id="des4">
+<center>
 <p>DesignWise is a creative services studio located in <br> Yorktown, Virginia. We create websites, print<br>
-graphics, and logo & identity branding both <br>locally and nationalwide.<p> </p></div>
+graphics, and logo & identity branding both <br>locally and nationalwide.
+</center><p>
+ </p></div>
 
 <p>
 <div id="right"><P align="right">
