--- a/lab13/fake.html
+++ b/lab13/fake.html
@@ -29,8 +29,7 @@
 <center>
 <p>DesignWise is a creative services studio located in <br> Yorktown, Virginia. We create websites, print<br>
 graphics, and logo & identity branding both <br>locally and nationalwide.
-</center><p>
- </p></div>
+</center></div>
 
 <p>
 <div id="right"><P align="right">
