--- a/lab13/fake.html
+++ b/lab13/fake.html
@@ -26,10 +26,9 @@
 <div id="title-box2"><div class="title 2">good business.</div></p>
 		 </div>
 <div id="des4">
-<center>
-<p>DesignWise is a creative services studio located in <br> Yorktown, Virginia. We create websites, print<br>
-graphics, and logo & identity branding both <br>locally and nationalwide.
-</center></div>
+<p>DesignWise is a creative services studio  located<br>  in Yorktown, Virginia. We create websites, print <br>
+graphics, and logo & identity  branding both locally <br> and nationalwide.
+</div>
 
 <p>
 <div id="right"><P align="right">
