--- a/lab13/fake.html
+++ b/lab13/fake.html
@@ -11,7 +11,7 @@
 <body>
 <div id="container">
 <div id="title-box">
-	   	<div id="des2">design<b>wise</b></div>
+	   	<div id="des2">design<b>wisee</b></div>
 			  	<div id="des3">we are creative people.</div>
 
 
@@ -27,7 +27,7 @@
 		 </div>
 <div id="des4">
 <p>DesignWise is a creative services studio  located<br>  in Yorktown, Virginia. We create websites, print <br>
-graphics, and logo & identity  branding both locally <br> and nationalwide. 
+graphics, and logo & identity  branding both locally <br> and nationalwide.
 </div>
 
 <p>
