--- a/lab13/fake.html
+++ b/lab13/fake.html
@@ -11,7 +11,7 @@
 <body>
 <div id="container">
 <div id="title-box">
-	   	<div id="des2">design<b>wisee</b></div>
+	   	<div id="des2">design<b>wise</b></div>
 			  	<div id="des3">we are creative people.</div>
 
 
