--- a/lab13/index.html
+++ b/lab13/index.html
@@ -2,16 +2,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab 12: Advanced Block-level Styling II</title>
+	<title>Fake CSS</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
 <div id="helpme">
 	<h2>Challenge</h2>
-	<p>This lab was challenging because we had to copy our own website without being able to use any code from the website.</p>
+	<p>This lab was challenging because we had to copy our own website without being able to use any code from the website.
+	</p>
 	<h2>Problems</h2>
-	<p>Formatting was the biggest problem</p>
+	<p>Formatting was the biggest problem and finding the fonts that were identical.</p>
 	<h2>Results</h2>
 	<p>Take a look!</p>
 </div>
