--- a/lab14/fake.html
+++ b/lab14/fake.html
@@ -5,12 +5,29 @@
 	<title>Fake HTML</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link rel="stylesheet" href="https://use.typekit.net/cxj7eob.css" rel="stylesheet">
 </head>
 <body>
-<div id="container">
-  <div id="title-box"><span style="font-size: 200px;font-weight:bold">OOO</span>
-Out of <div id="help"><span style:"float:right"> Office</span></div></div>
+<div id="container"><table class="left">
+<div id="spotify">
+	<tr><th><img src="img/spot.png"></th>
+		<th>spotify</th></div></table>
+
+<div id="OOO"><table class="center">
+  <tr>
+    <th><span style="font-size:230px"><center>OOO</span></th>
+    <th><div id"space">Out Of<br>Office</div></th></center></table>
+  </tr>
+</div>
+<div id="text"><b>Jetting off? Tell everyone with a playlist <br> inspired by your destination.</b></div>
+
+<p>
+	<p>
+
+<center><button class="button"><b>GET STARTED</b></button></center>
+</p>
 
 
+<div id="end">ciao! arrivederci! aloha! adios! au revoir! <br> bon voyage! shalom! auf Wiedersegen!  </div>
 
 </div></div>
