--- a/lab14/fake.html
+++ b/lab14/fake.html
@@ -15,8 +15,8 @@
 
 <div id="OOO"><table class="center">
   <tr>
-    <th><span style="font-size:230px"><center>OOO</span></th>
-    <th><div id"space">Out Of<br>Office</div></th></center></table>
+    <th><div id=space><center>OOO</div></center></th>
+    <th>Out Of<br>Office</th></center></table>
   </tr>
 </div>
 <div id="text"><b>Jetting off? Tell everyone with a playlist <br> inspired by your destination.</b></div>
@@ -28,6 +28,6 @@
 </p>
 
 
-<div id="end">ciao! arrivederci! aloha! adios! au revoir! <br> bon voyage! shalom! auf Wiedersegen!  </div>
+<div id="end"><b>ciao! arrivederci! aloha! adios! au revoir! <br> bon voyage! shalom! auf Wiedersegen! </b> </div>
 
 </div></div>
