--- a/lab14/fake.html
+++ b/lab14/fake.html
@@ -11,7 +11,7 @@
 <div id="container"><table class="left">
 <div id="spotify">
 	<tr><th><img src="img/spot.png"></th>
-		<th>spotify</th></div></table>
+		<th><span style="font-size: 22px">Spotify</span></th></div></table>
 
 <div id="OOO"><table class="center">
   <tr>
@@ -28,6 +28,8 @@
 </p>
 
 
-<div id="end"><b>ciao! arrivederci! aloha! adios! au revoir! <br> bon voyage! shalom! auf Wiedersegen! </b> </div>
+<div id="end"><b>ciao! <span style="color:white">arrivederci!</span> aloha!
+	 <span style="color:white">adios!</span> au revoir! <br><span style="color:white"> bon voyage!</span>shalom!
+	<span style="color:white">auf Wiedersegen!</span> </b> </div>
 
 </div></div>
