--- a/lab14/index.html
+++ b/lab14/index.html
@@ -9,6 +9,18 @@
 <body>
 <div id="container">
 <div id="title-box">
-<p> OOO </p>
+	<div id="helpme">
+		<h2>Challenge</h2>
+		<p>This lab was challenging because we had to copy a website based on a screenshot,
+			without being able to use any code from the website.
+		</p>
+		<h2>Problems</h2>
+		<p>Formatting was the biggest problem and finding the fonts that were identical.
+		Another problem was figuring out text spacing. I could not get it to be as spot on as I wanted.</p>
+		<h2>Results</h2>
+		<p>Take a look!</p>
+	</div>
+	</body>
+		<iframe id="fake" src="fake.html"></iframe>
 
 </div></div>
