--- a/Lab15/index.html
+++ b/Lab15/index.html
@@ -2,9 +2,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Fake HTML</title>
+	<title>Oh you fancy, huh</title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
+	<link href="https://fonts.googleapis.com/css2?family=Norican&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://use.typekit.net/cxj7eob.css" rel="stylesheet">
 </head>
 <body>
@@ -17,12 +18,16 @@
 </nav>
 <div id="container">
 		<h2>Challenge</h2>
-		<p>This lab was challenging because we had to copy a website based on a screenshot,
-			without being able to use any code from the website.
+		<p>The goal of this lab was to create Fancy CSS. Basically,
+			 this means, with our coding knowledge,
+			 Wes wants us to embellish and add more CSS elements. This will help us stylize our pages.
+			 I used the <span class="color">text-shadow</span>, <span class="color">box-shadow</span>,
+			  <span class="color">gradient,</span>, <span class="color">filters</span>, <span class="color">rounded corners</span>,
+				<span class="color">object-fit</span>, and <span class="color">transform</span> elements.
 		</p>
 		<h2>Problems</h2>
-		<p>Formatting was the biggest problem and finding the fonts that were identical.
-		Another problem was figuring out text spacing. I could not get it to be as spot on as I wanted.</p>
+		<p>The biggest problem I had when creating it was making sure it looked nice but not guady with CSS.
+		Adding text shadows and a lot of styling elements can often become overdramatic. </p>
 		<h2>Results</h2>
 		<p>Take a look!</p>
 
