--- a/index.html
+++ b/index.html
@@ -51,14 +51,43 @@
 		however, Stephanie has not practiced coding in awhile. She wants to become competent in coding, be able to
 		develop websites and learn <b>backend coding</b> eventually.</p>
 
-
-
-<img src="img/yuhhh.png" />
-
-
-
-
 </nav>
+<aside id="sidebar">
+<center>	<h2>Sidebar</h2>
+<h3>Facts about me</h3></center>
+		<p>
+		<ul>
+			<li><a href="lab2/">Lab 2: Your First HTML</a></li>
+			<li><a href="lab3/">Lab 3: File Structure</a></li>
+			<li><a href="lab4/">Lab 4: File Transfer</a></li>
+			<li><a href="lab5/">Lab 5: More HTML</a></li>
+			<li><a href="lab6/">Lab 6: More Complicated HTML</a></li>
+			<li><a href="lab7/">Lab 7: Intro to CSS</a></li>
+			<li><a href="lab8/">Lab 8: CSS Selectors</a></li>
+			<li><a href="lab8/">Lab 9: Styling Block Elements</a></li>
+			<li><a href="lab10/">Lab 10: Styling Text Elements</a></li>
+			<li><a href="lab11/">Lab 11: Advanced Block Level Styling</a></li>
+			<li><a href="lab12/">Lab 11: Advanced Block Level Styling II</a></li>
+			<li><a href="lab13/fake.html">Fake HTML </a></li>
+			<li><a href="lab14/fake.html">Fake HTML 2 </a></li>
+			<li><a href="Lab15/">Fancy CSS</a></li>
+
+	<img src="img/yuhhh.png" />
+
+</center>
+
+</aside>
+
+
+
+
+
+
+
+
+
+
+
 <body>
 </p>
 </body>
