--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 </nav>
 <aside id="sidebar">
 <center>	<h2>Sidebar</h2>
-<h3>Facts about me</h3></center>
+<h3>my labs</h3></center>
 		<p>
 		<ul>
 			<li><a href="lab2/">Lab 2: Your First HTML</a></li>
