--- a/lab3/index.html
+++ b/lab3/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-<img src="../img/step5.jpg">
+<img src="../img/yuh.jpg">
 <h1>Stephanie Arteaga</h1>
 <p>Hello world. Call me Stephanie or Steph. 21 from Northern California. My interests include listening
 to true crime podcasts, cosmetology, road trips, long walks on the beach and graphic design.</p>
