--- a/index.html
+++ b/index.html
@@ -27,8 +27,7 @@
 
 
 <h1>Stephanie Arteaga</h1>
-<b>	<h2>communication design</h2> </b>
-<b>	<h1>student</h1> </b>
+<b>	<h2>communication design: visual design</h2> </b>
 	<p><b>Stephanie Arteaga</b> is a student at CSUMB. At the young age of 21, she currently resides in
 	<b>Seaside, California</b>. Stephanie is from <b>Northern California</b>, specifically,
 	from <b>Manteca, California</b>. This is near Stockton and the 209 area. She went
@@ -53,8 +52,8 @@
 
 </nav>
 <aside id="sidebar">
-<center>	<h2>Sidebar</h2>
-<h3>my labs</h3></center>
+<h1>Sidebar</h1>
+<h2>labs so far:</h2>
 		<p>
 		<ul>
 			<li><a href="lab2/">Lab 2: Your First HTML</a></li>
@@ -74,7 +73,6 @@
 
 	<img src="img/yuhhh.png" />
 
-</center>
 
 </aside>
 
