--- a/lab17.2/flexbox.html
+++ b/lab17.2/flexbox.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" type="text/css" href="../css/flexbox.css">
   <link rel="stylesheet" type="text/css" href="css/flexbox.css">
   <nav>		<ul>
-  			<a href="/lab17.2/index.html">Lab 17</a> •
-        	<a href="/lab17.2/float.html">Float HTML</a> •
-          	<a href="/lab17.2/flexbox.html">Flexbox HTML</a>
+  			<a href="/cst251/lab17.2/index.html">Lab 17</a> •
+        	<a href="/cst251/lab17.2/float.html">Float HTML</a> •
+          	<a href="/cst251/lab17.2/flexbox.html">Flexbox HTML</a>
   		</ul>
   </nav>
 
@@ -16,7 +16,7 @@
 
 <div class="main">
 
-  <h1>Lab 17: CSS Flexbox</h1>
+  <h1>Lab 17: Flexbox Layout</h1>
 
 <h1>Challenges, Problems & Results</h1>
 
