--- a/lab17.2/index.html
+++ b/lab17.2/index.html
@@ -5,11 +5,34 @@
   <title>CSS Layout</title>
   <link rel="stylesheet" type="text/css" href="../css/index.css">
   <link rel="stylesheet" type="text/css" href="css/index.css">
-<header>Css Layout</<header>
-<footer>This is a footer?</footer>
-<nav>Sum Links</nav>
+<ul>
+  <li><a class="../index.html" href="">Home</a></li>
+  <li><a href="/cst251/lab17.2/flexbox.html">Flexbox</a></li>
+  <li><a href="/cst251/lab17.2/float.html">Float</a></li>
+</ul>
+
+<div class="hai">
+  <h1>Lab 17: Float Layout</h1>
+
+<h1>Challenges</h1>
+
+The lab was to create different CSS layout. We were supposed to create our regular file,
+ our float layout and flexbox layout. As a bonus we were also able to create a grid layout. The goal of this lab was
+ to create something new and even design it out.
+<h1> Problems </h1>
+<p>
+
+I only did float and flexbox because I am not used to this and had to use W3 schools a lot. The problem I found was
+how to initally start this lab because the last lecture was went over remotely. I don't think I got all the information
+I needed via zoom which is my error.
+
+<h1>Results</h1>
+<p>
+Take a look!
+
+<aside>
+    <img src="img/p1.png">
+</aside>
+
 <main>
-  <div class="clearfix">
-    <div class="box">
-problem, challenges and results</main>
-<aside>s</aside>
+</html>
