--- a/lab17.2/float.html
+++ b/lab17.2/float.html
@@ -16,19 +16,21 @@
 
 <div class="main">
 
-  <h1>Lab 17: CSS Flexbox</h1>
+  <h1>Lab 17: Float Layout</h1>
 
-<h1>Challenges, Problems & Results</h1>
+<h1>Challenges</h1>
 
 The lab was to create different CSS layout. We were supposed to create our regular file,
- our float layout and flexbox layout. As a bonus we were also able to create a grid layout.
-
+ our float layout and flexbox layout. As a bonus we were also able to create a grid layout. The goal of this lab was
+ to create something new and even design it out.
+<h1> Problems </h1>
 <p>
 
 I only did float and flexbox because I am not used to this and had to use W3 schools a lot. The problem I found was
-how to initally start this lab because the last lecture was went over remotely.
+how to initally start this lab because the last lecture was went over remotely. I don't think I got all the information
+I needed via zoom which is my error.
 
-
+<h1>Results</h1>
 <p>
 Take a look!</div>
 
