--- a/lab17.2/flexbox.html
+++ b/lab17.2/flexbox.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="../css/flexbox.css">
   <link rel="stylesheet" type="text/css" href="css/flexbox.css">
   <nav>		<ul>
-  			<a href="/cst251/lab17.2/index.html">Lab 17</a> •
+  			<a href="../index.html">Lab 17</a> •
         	<a href="/cst251/lab17.2/float.html">Float HTML</a> •
           	<a href="/cst251/lab17.2/flexbox.html">Flexbox HTML</a>
   		</ul>
