--- a/lab17.2/index.html
+++ b/lab17.2/index.html
@@ -12,13 +12,23 @@
 </ul>
 
 <div class="hai">
-  <h1>Lab 17: Float Layout</h1>
 
-<h1>Challenges</h1>
+
+
+<div class="clearfix">
+  <div class="box">
+  <h2>Lab 17: Float Layout</h2>
+
+
+  <h1>Challenges</h1>
 
 The lab was to create different CSS layout. We were supposed to create our regular file,
  our float layout and flexbox layout. As a bonus we were also able to create a grid layout. The goal of this lab was
  to create something new and even design it out.
+
+  </div>
+  <div class="box2">
+
 <h1> Problems </h1>
 <p>
 
@@ -29,9 +39,10 @@ I needed via zoom which is my error.
 <h1>Results</h1>
 <p>
 Take a look!
-
+  </div>
+</div>
 <aside>
-    <img src="img/p1.png">
+    <img src="img/p6.gif">
 </aside>
 
 <main>
