--- a/lab17.2/float.html
+++ b/lab17.2/float.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" type="text/css" href="../css/float.css">
   <link rel="stylesheet" type="text/css" href="css/float.css">
   <nav>		<ul>
-  			<a href="/lab17.2/index.html">Lab 17</a> •
-        	<a href="/lab17.2/float.html">Float HTML</a> •
-          	<a href="/lab17.2/flexbox.html">Flexbox HTML</a>
+  			<a href="/cst251/lab17.2/index.html">Lab 17</a> •
+        	<a href="/cst251/lab17.2/float.html">Float HTML</a> •
+          	<a href="/cst251/lab17.2/flexbox.html">Flexbox HTML</a>
   		</ul>
   </nav>
 
