--- a/lab17.2/flexbox.html
+++ b/lab17.2/flexbox.html
@@ -6,9 +6,9 @@
   <link rel="stylesheet" type="text/css" href="../css/flexbox.css">
   <link rel="stylesheet" type="text/css" href="css/flexbox.css">
   <nav>		<ul>
-  			<a href="../index.html">Lab 17</a> •
+  		<h2>	<a href="/cst251/lab17.2/index.html">Lab 17</a> •
         	<a href="/cst251/lab17.2/float.html">Float HTML</a> •
-          	<a href="/cst251/lab17.2/flexbox.html">Flexbox HTML</a>
+          	<a href="/cst251/lab17.2/flexbox.html">Flexbox HTML</a> </h2>
   		</ul>
   </nav>
 
@@ -54,7 +54,7 @@ Take a look!</div>
   </div>
 
   <div class="footer">
-    <p><a href="../index.html"><h2>CST251 Homepage</h2></a></p>
+    <p><a href="../index.html"><h3>CST251 Homepage</h3></a></p>
   </div>
   </body>
   </html>
