--- a/lab19/index.html
+++ b/lab19/index.html
@@ -69,11 +69,11 @@
       <img src="img/catgif.gif" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4">
-      <p>There has not been a lot of challenges. It was mostly picking a theme and figuring out how the code works.
+      <p>There has not been a lot of challenges. It was mostly picking a theme and figuring out how the code works. 
 			</p>  <img src="img/gif1.gif" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
     <div class="col-sm-4">
-      <p>All done <br> Check it out! <br> :)</p>
+      <p>All done <br> Check it out! <br> ♥</p>
       <img src="img/catgif2.gif" class="img-responsive margin" style="width:100%" alt="Image">
     </div>
   </div>
