--- a/lab20/index.html
+++ b/lab20/index.html
@@ -16,7 +16,7 @@
 
 <div class="main">
 
-  <h1>Lab 17: Lab 20: Team Project Sketches</h1>
+  <h1>Lab 20: Team Project Sketches</h1>
 
 <h1>Challenges, Problems & Results</h1>
 
