--- a/lab20/index.html
+++ b/lab20/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
   <nav>		<ul>
   		<h3>	<a href="/cst251/lab17.2/index.html">Lab 17</a> •
-        	<a href="/cst251/lab18/index.html">lab 18</a> •
+        	<a href="/cst251/lab18/index.html">Lab 18</a> •
           	<a href="/cst251/lab19/index.html">Lab 19</a> </h3>
   		</ul>
   </nav>
@@ -24,16 +24,16 @@ The goal was to design quick sketches to create ideas for our final project. </d
 
   <div class="row">
 <div class="column">
-      <img src="img/lab1.jpg">
-      <img src="img/lab2.jpg">
-      <img src="img/lab3.jpg">
+      <img src="../img/lab1.jpg">
+      <img src="../img/lab2.jpg">
+      <img src="../img/lab3.jpg">
 
     </div>
 
           <div class="column">
-        <img src="img/lab4.jpg">
-      <img src="img/lab5.jpg">
-      <img src="img/lab6.jpg"> </div>
+        <img src="../img/lab4.jpg">
+      <img src="../img/lab5.jpg">
+      <img src="../img//lab6.jpg"> </div>
   </div>
 
   <div class="footer">
