--- a/lab20/index.html
+++ b/lab20/index.html
@@ -24,16 +24,10 @@ The goal was to design quick sketches to create ideas for our final project. </d
 
   <div class="row">
 <div class="column">
-      <img src="../img/lab1.jpg">
-      <img src="../img/lab2.jpg">
-      <img src="../img/lab3.jpg">
+      <img src="img/lab7.jpg">
+      <img src="img/lab8.jpg">
 
-    </div>
-
-          <div class="column">
-        <img src="../img/lab4.jpg">
-      <img src="../img/lab5.jpg">
-      <img src="../img//lab6.jpg"> </div>
+ </div>
   </div>
 
   <div class="footer">
