--- a/lab21/index.html
+++ b/lab21/index.html
@@ -24,7 +24,7 @@ The goal was to design final sketches for our group project. </div>
 
   <div class="row">
 <div class="column">
-      <img src="img/d1.jpg">
+      <img src="img/d1.JPG">
       <img src="img/d2.jpg">
         <img src="img/d3.jpg">
 
